Bug/keyboard scroll on create product on ios (#49)
* Remove scroll problems on IOS

* Resolve error on navigation with tabs, where allways open the view in cache inside that view

--- a/source/components/products/create/_create.scss
+++ b/source/components/products/create/_create.scss
@@ -1,3 +1,7 @@
+ion-content.form-basic.form-with-labels.new_product.scroll-content.ionic-scroll.overflow-scroll.has-header.keyboard-up {
+	height: auto !important;
+}
+
 .form-basic.new_product {
 	form {
 		select-field {
